# uURU

./: .env.sample  .gitignore  404.html  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose-base.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: images-pr-main.yml  images-push-main.yml  pages.yml  push-pr-images.yml
app/: main.py
app/api/: deps.py  extension.py  federation.py  main.py  media.py  pages.py  provisioning.py  settings.py  site.py  telephoning.py  templates.py  user.py
app/core/: config.py  db.py  ldap.py  omm.py  security.py
app/models/: __init__.py  asterisk.py  extension.py  federation.py  media.py  user.py
app/telephoning/: flavor.py  main.py  templates.py  websip.py
app/tests/: conftest.py
app/util/: media.py
app/web/: deps.py  index.py  main.py  message.py  pages.py  templates.py  user.py
asterisk/: Dockerfile  entrypoint.sh
asterisk/etc/: odbc.ini.tmpl
configuration/: index.html
docs/: configuration.md  federation.md  getting-started.md  index.md  media.md  pages.md  phone-flavors.md
docs/features/: federation.md  media.md  originate.md  pages.md  websip.md
docs/phone_types/: SIP.md  callgroup.md  conference.md  (+6 more)
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
getting-started/: index.html
migrations/: env.py
phone-flavors/: index.html
search/: search_index.json
templates/: bootstrap_base.j2.html  login.j2.html  navbar.j2.html  phonebook.j2.html  phonemap.j2.html
templates_provisioning/: innovaphone.j2.cfg
(+116 files in other folders)
