[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "argon2-cffi>=25.1.0",
    "coverage>=7.9.2",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ldap3>=2.9.1",
    "mistune>=3.1.3",
    "mitel-ommclient2[crypt]",
    "psycopg[binary]>=3.2.9",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
mitel-ommclient2 = { git = "https://github.com/hirnpfirsich/mitel_ommclient2.git" }
